
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int SEEK_SET ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fputc (char,int *) ;
 int fseek (int *,int,int ) ;

int main(int argc, char *argv[])
{
 FILE *f;
 f = fopen(argv[1], "r+");
 fseek(f, 5, SEEK_SET);
 fputc('\x00', f);
 fclose(f);
 return 0;
}
